learnt some tools for web developement including but not limited to...

--- a/layout/login/title/example.html
+++ b/layout/login/title/example.html
@@ -5,8 +5,13 @@
 		<link rel="icon" type="image/x-icon" href="images/icons/vetDoc.ico">
 	</head>
 	<body>
+		<div class="pageTitle">
 		<h2>Olngarua Agrovet</h2>
+		</div>
+
+		<div class="pageSubTitle">
 		<h3>The login form is next to build</h3>
+		</div>
 	</body>
 </html>
 
